objects/ssot__EngagementAnalysisTextParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisTextId__c</fullName>
        <label>Engagement Analysis Text Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Engagement Analysis Text Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantRole__c</fullName>
        <label>Participant Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718543580631_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementAnalysisTextParticipant_Pa_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>EngagementAnalysisTextParticipant_Pa_rel</relationshipLabel>
        <relationshipName>rel_1718543580631_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718544747351_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementAnalysisTextParticipant_Pa_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>EngagementAnalysisTextParticipant_Pa_rel</relationshipLabel>
        <relationshipName>rel_1718544747351_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718546694619_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementAnalysisTextParticipant_En_rel</label>
        <referenceTo>ssot__EngagementAnalysisText__dlm</referenceTo>
        <relationshipLabel>EngagementAnalysisTextParticipant_En_rel</relationshipLabel>
        <relationshipName>rel_1718546694619_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>